# ViTa-SLAM

./: .gitignore  README.md  TECHNICAL_DOCUMENTATION.md
master_node/: CMakeLists.txt  README.md
src/master_node/: README.md  package.xml
src/master_node/launch/: bagfile.launch  master.launch
src/vitaslam/: CMakeLists.txt  README.md
src/vitaslam/config/: tuning_parameters_guide.txt
src/vitaslam/launch/: whiskeye_slam.launch
src/vitaslam/msg/: CombinedTemplateMessage.msg
src/vitaslam/src/: main_em.cpp  main_pc.cpp  main_vita.cpp
src/vitaslam/src/graphics/: experience_map_scene.h  local_view_scene.h  path_node.h  posecell_scene.h
src/vitaslam/src/utils/: utils.h
src/vitaslam/src/vitaslam/: experience_map.cpp  experience_map.h  local_template_match.cpp  local_template_match.h  posecell_network.cpp  posecell_network.h  posecells.cpp  posecells.h  preprocess.cpp  preprocess.h
src/whiskeye_controller/: README.md  package.xml
src/whiskeye_controller/launch/: CBS19_orbit.launch  ICRA2019_random_walk_square.launch  neck_teleop.launch  teleop.launch
src/whiskeye_controller/src/: neck_teleop.py  whisker_teleop.py  whiskeye_controller.py
src/whiskeye_gazebo/: CMakeLists.txt
src/whiskeye_gazebo/launch/: CBS19_generate_weights_square.launch  ICRA20_dataset_generation_crowded.launch  ICRA20_dataset_generation_modified.launch  ICRA20_dataset_generation_rock.launch  ICRA20_dataset_generation_square.launch  ICRA20_dataset_generation_square_shadows.launch  ICRA20_dataset_generation_square_shadows_spotlight.launch  ICRA20_dataset_generation_tactile_only.launch  whiskeye_empty.launch
src/whiskeye_gazebo/worlds/: ICRA20_dataset_generation_crowded.world  ICRA20_dataset_generation_modified.world  ICRA20_dataset_generation_rock.world  ICRA20_dataset_generation_square.world  ICRA20_dataset_generation_square_shadows.world  ICRA20_dataset_generation_square_shadows_spotlight.world  ICRA20_dataset_generation_tactile_only.world
vitaslam/: CMakeLists.txt  package.xml
vitaslam/config/: config_whiskeye.txt.in
vitaslam/src/: main_vita.cpp
vitaslam/src/graphics/: experience_map_scene.h
vitaslam/src/vitaslam/: local_template_match.cpp  local_template_match.h  posecell_network.cpp  posecell_network.h  posecells.h  preprocess.cpp  preprocess.h
whiskeye_controller/: CMakeLists.txt
whiskeye_controller/launch/: ICRA2019_orbit_trajectory.launch  whisker_rcp.launch  whisker_teleop.launch
whiskeye_controller/src/: CBS_orbit.py  orbit_trajectory.py  random_walk_square.py  teleop.py  whisker_rcp.py
whiskeye_gazebo/: README.md  package.xml
whiskeye_gazebo/launch/: CBS19_experiment_square.launch
whiskeye_gazebo/worlds/: CBS19_experiment_square.world  CBS19_generate_weights_square.world
whiskeye_robot/: model.config  whiskeye_robot.sdf
whiskeye_robot/mesh/: README.txt
whiskeye_robot/mesh/hi/: whiskeye_body-3_body-1.dae  whiskeye_body-3_ec-22_large-1.dae  whiskeye_body-3_host_pc-1.dae  whiskeye_body-3_myomotordriverpcb-1.dae  whiskeye_body-3_rl-d-30-101-50-01033_complete-1.dae  whiskeye_body-3_wheel-1.dae  whiskeye_body-3_wheel-2.dae  whiskeye_body-3_wheel-3.dae  whiskeye_gimbal-1_ec-22_medium-2.dae  whiskeye_gimbal-1_gimbal_frame-1.dae  whiskeye_gimbal-1_myomotordriverpcb-2.dae  whiskeye_gimbal-1_rl-d-20-101-38-01033_complete-1.dae  whiskeye_head-1_elp_camera-1.dae  whiskeye_head-1_elp_camera-2.dae  whiskeye_head-1_eyemount_camholder_reduced-1.dae  whiskeye_head-1_eyemount_camholder_reduced-2.dae  whiskeye_head-1_eyemount_elevation-1.dae  whiskeye_head-1_eyemount_elevation-2.dae  whiskeye_head-1_eyemount_yaw-3.dae  whiskeye_head-1_eyemount_yaw-4.dae  whiskeye_head-1_head_barebones-1.dae  whiskeye_head-1_pcb_head-1.dae  whiskeye_head-1_pearnana_tangoblack-1.dae  whiskeye_head-1_pi_compute-1.dae  whiskeye_head-1_row_mini-1_row_reduced-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_100mm-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_160mm-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_50mm-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_70mm-1.dae  whiskeye_head-1_row_mini-2_row_reduced-1.dae  whiskeye_head-1_row_mini-2_whiskerasm_100mm-1.dae  whiskeye_head-1_row_mini-2_whiskerasm_160mm-1.dae  whiskeye_head-1_row_mini-2_whiskerasm_50mm-1.dae  whiskeye_head-1_row_mini-2_whiskerasm_70mm-1.dae  whiskeye_head-1_row_mini-3_row_reduced-1.dae  whiskeye_head-1_row_mini-3_whiskerasm_100mm-1.dae  whiskeye_head-1_row_mini-3_whiskerasm_160mm-1.dae  whiskeye_head-1_row_mini-3_whiskerasm_50mm-1.dae  whiskeye_head-1_row_mini-3_whiskerasm_70mm-1.dae  whiskeye_head-1_row_mini-4_row_reduced-1.dae  (+18 more)
whiskeye_robot/mesh/lo/: whiskeye_body-3_body-1.dae  whiskeye_body-3_ec-22_large-1.dae  whiskeye_body-3_host_pc-1.dae  whiskeye_body-3_myomotordriverpcb-1.dae  whiskeye_body-3_rl-d-30-101-50-01033_complete-1.dae  whiskeye_body-3_wheel-1.dae  whiskeye_body-3_wheel-2.dae  whiskeye_body-3_wheel-3.dae  whiskeye_gimbal-1_ec-22_medium-2.dae  whiskeye_gimbal-1_gimbal_frame-1.dae  whiskeye_gimbal-1_myomotordriverpcb-2.dae  whiskeye_gimbal-1_rl-d-20-101-38-01033_complete-1.dae  whiskeye_head-1_elp_camera-1.dae  whiskeye_head-1_elp_camera-2.dae  whiskeye_head-1_eyemount_camholder_reduced-1.dae  whiskeye_head-1_eyemount_camholder_reduced-2.dae  whiskeye_head-1_eyemount_elevation-1.dae  whiskeye_head-1_eyemount_elevation-2.dae  whiskeye_head-1_eyemount_yaw-3.dae  whiskeye_head-1_eyemount_yaw-4.dae  whiskeye_head-1_head_barebones-1.dae  whiskeye_head-1_pcb_head-1.dae  whiskeye_head-1_pearnana_tangoblack-1.dae  whiskeye_head-1_pi_compute-1.dae  whiskeye_head-1_row_mini-1_row_reduced-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_100mm-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_160mm-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_50mm-1.dae  whiskeye_head-1_row_mini-1_whiskerasm_70mm-1.dae  whiskeye_head-1_row_mini-2_row_reduced-1.dae  whiskeye_head-1_row_mini-2_whiskerasm_100mm-1.dae  whiskeye_head-1_row_mini-2_whiskerasm_160mm-1.dae  whiskeye_head-1_row_mini-3_row_reduced-1.dae  (+25 more)
whiskeye_robot/src/: makefile
whiskeye_robot/test/: launch_sim.sh  selectfigure.m  show_contact_head.m  whiskeye.world  xy_capture.m  xy_show.m
(+87 files in other folders)
