<?xml version="1.0"?>
<package format="2">
  <name>vitaslam</name>
  <version>1.0.0</version>
  <description>The vitaslam package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
