<?xml version="1.0"?>
<package format="2">
  <name>whiskeye_gazebo</name>
  <version>1.0.0</version>
  <description>The whiskeye_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>MIT</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</author>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ext_msgs</build_depend>
</package>
