<?xml version="1.0"?>
<package format="2">
  <name>master_node</name>
  <version>1.0.0</version>
  <description>The master_node package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</maintainer>

  <license>MIT</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/master_node</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
