<?xml version="1.0"?>
<package format="2">
  <name>whiskeye_controller</name>
  <version>1.0.0</version>
  <description>The whiskeye_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>GPLv3</license>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <author email="oliver.struckmeier@aalto.fi">Oliver Struckmeier</author>


  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
